# inferencekey-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/node/: Cargo.toml  build.rs  lib.ts  package-lock.json  package.json  tsconfig.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/python/python/inferencekey/: __init__.py  clients.py  enums.py  errors.py  publish.py  types.py
bindings/python/python/inferencekey/backend/: __init__.py  base.py  package.py  packaging.py  serve.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_backend_contract.py  test_backend_packaging.py  test_backend_serve.py  test_example_text_sentiment.py  test_publish.py
capi/: Cargo.toml  cbindgen.toml
capi/src/: ffi.rs  lib.rs  runtime.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs
core/src/adapters/: reqwest_http.rs
core/src/domain/: config.rs  enums.rs  redact.rs  spec.rs  sse.rs  wire.rs
core/src/pipelines/: data.rs  management.rs
core/src/ports/: http.rs
docs/: Dockerfile  README.md  astro.config.mjs  lychee.toml  nginx.conf  package-lock.json  package.json
docs/src/content/: config.ts
docs/src/content/docs/en/: index.mdx
docs/src/content/docs/en/api/: go.mdx  index.mdx  java.mdx  python.mdx  typescript.mdx
docs/src/content/docs/en/guides/: authentication.mdx  custom-backends.mdx  use-cases.mdx  workloads-by-policy-worker-modality.mdx
docs/src/content/docs/en/quickstart/: first-call.mdx  first-ensure.mdx  tokens.mdx  tutorial.mdx
docs/src/content/docs/en/reference/: architecture.mdx  backends-and-policies.mdx  common-errors.mdx  glossary.mdx  ondrift.mdx  tokens.mdx  wire-format.mdx
docs/src/content/docs/es/: index.mdx
docs/src/content/docs/fr/: index.mdx
docs/src/styles/: brand.css
examples/: .gitignore  CONTRIBUTING.md  README.md
examples/custom-backend-echo/: README.md  backend.py  failing_backend.py  requirements.txt
examples/custom-backend-music-caption/: .gitignore  README.md  backend.py  requirements.txt
examples/custom-backend-music-caption/lpmc/music_captioning/model/: bart.py  modules.py
examples/custom-backend-music-caption/lpmc/utils/: audio_utils.py  eval_utils.py
examples/custom-backend-text-sentiment/: README.md  backend.py
examples/gguf-llamacpp-private-amd/: .env.example  README.md  main.py  requirements.txt
