[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["InferenceKey <dev@inferencekey.com>"]
repository = "https://github.com/inferencekey/inferencekey-sdk"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
