[package]
name = "inferencekey-core"
description = "Core logic + transport for the InferenceKey SDK, shared by every language binding."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "inferencekey_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
