[package]
name = "inferencekey-python"
description = "Python binding for the InferenceKey SDK (pyo3 over inferencekey-core)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_inferencekey"
crate-type = ["cdylib"]

[dependencies]
inferencekey-core = { path = "../../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
# abi3-py39: build against the stable ABI so a single wheel works on every
# CPython >= 3.9 (and sidesteps probing the exact local interpreter version).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
